# bevywasmstarter

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: index.js
src/: lib.rs  main.rs
src/game/: log.rs  mod.rs  player.rs  wasm.rs
src/game/input/: mod.rs  mouse.rs  touch.rs
static/: index.html
