[package]
name = "myapp2"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7.0", default-features = false, features = ["bevy_winit", "render"]}
wasm-bindgen = "0.2.81"
bevy-inspector-egui = "0.10.0"
web-sys = {version = "0.3.36", features = ['Window', 'TouchEvent', 'TouchList', 'Touch']}

[profile.dev.package."*"]
opt-level = 3